--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ button:hover { transform: scale(1.05); }
 
 <script>
 /* TYPING EFFECT */
-const text = "Whenever you miss me, hug Chocopie… he’s a little piece of me 🧸❤️";
+const text = "Whenever you miss me, hug Dora… he’s a little piece of me 🧸❤️";
 let i = 0;
 function type() {
   if (i < text.length) {
@@ -245,4 +245,5 @@ function heartRain() {
 </script>
 
 </body>
+
 </html>
